test/good/dictionaries/for03.px

for t1, t2 in {'a': 1, 'b': 1} by -2, {'x': 3} by 4 do
    print t1.b, t2
