test/bad/loops/for10.px

for a, b in 1..2, 3...4, 'x'..'y' do
    skip
